mwp-web/src/static/styles.scss
:root {
  --foreground: #1d1d1f;
  --dark: #222;
  --background: #fff;
  --light: #555;
  --lightest: #aaa;
  --font-sans: system-ui, sans-serif;
  --page-width: 840px;
  --font-mono: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;

  --spacings-bit: 4px;
  --spacings-byte: 8px;
  --spacings-kilo: 12px;
  --spacings-mega: 16px;
  --spacings-giga: 24px;
  --spacings-tera: 32px;
  --spacings-peta: 40px;
  --spacings-exa: 48px;
  --spacings-zetta: 56px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: #fff;
    --dark: #ddd;
    --background: #1d1d1f;
    --light: #aaa;
    --lightest: #666;
  }
}

html {
  font-feature-settings: normal;
  font-variation-settings: normal;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  font-family: var(--font-sans);
  color: var(--foreground);
  background-color: var(--background);
  word-break: break-word;
  line-height: 1.5;
  width: 100%;
}

::selection {
  background-color: var(--foreground);
  color: var(--background);
}

* {
  box-sizing: border-box;
}

a {
  color: var(--foreground);
  text-decoration: underline;

  &:hover {
    text-decoration: none;

    svg {
      fill: var(--background);
    }
  }

  svg {
    height: 1em;
    width: 1em;
    fill: var(--foreground);
  }
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 400;
  font-family: var(--font-serif);
  letter-spacing: -.05em;
  margin: 0.25em 0 0.25em 0;
  line-height: 1.375;
  padding-top: 0.5em;
  overflow: hidden;
}

h1 {
  font-size: 1.8em;
  border-bottom: 1px solid var(--light);
  padding-bottom: 0.17em;
}

h2 {
  font-size: 1.5em;
  border-bottom: 1px solid var(--light);
  padding-bottom: 0.17em;
}

h3,
h4 {
  font-weight: bold
}

hr {
  background: var(--foreground);
  height: 1px;
  border: 0;
}

p {
  word-break: break-word;
}

pre {
  overflow-x: auto;
  padding: 1em;
  border-radius: 0.2em;
}

code {
  font-family: var(--font-mono);
  font-weight: 120;
  font-size: 14px;
}

ul,
ol {
  padding-left: 1.2em;
}

form {
  margin: 0;
}

// content

.layout {
  display: grid;
  grid-template-columns: 16em minmax(0, 1fr);
  grid-template-rows: auto auto 1fr auto;
  grid-template-areas:
    'nav nav'
    'sidebar meta'
    'sidebar content'
    'footer footer';

  @media (width <=1000px) {
    grid-template-columns: auto;
    grid-template-rows: auto auto 1fr auto auto;
    grid-template-areas:
      'nav'
      'sidebar'
      'meta'
      'content'
      'footer';
  }
}

.nav {
  grid-area: nav;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: var(--spacings-kilo) var(--spacings-giga);
  border-bottom: 2px solid var(--light);

  .burger {
    display: none;
    background-color: transparent;
    border-color: transparent;
    color: var(--foreground);
    width: 28px;
    height: 28px;
    padding: 0;
    cursor: pointer;

    @media (width <=1000px) {
      display: block;
    }
  }

  .options {
    display: flex;
    flex-direction: row;
    gap: var(--spacings-kilo);
  }
}

#sidebar {
  grid-area: sidebar;
  padding: var(--spacings-giga);
  border-right: 2px solid var(--light);

  @media (width <=1000px) {
    padding: var(--spacings-giga) var(--spacings-tera);
    border-right: none;
    border-bottom: 2px solid var(--light);
    display: none;

    &.expanded {
      display: block;
    }
  }
}


.meta {
  grid-area: meta;
  padding: var(--spacings-kilo) var(--spacings-giga);
  border-bottom: 2px solid var(--light);
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  .metadata {
    display: flex;
    flex-direction: row;
    gap: var(--spacings-byte);
  }
}

main {
  grid-area: content;
  padding: var(--spacings-kilo) var(--spacings-giga);
  margin-bottom: var(--spacings-zetta);
}

footer {
  grid-area: footer;
  padding: var(--spacings-giga);
  border-top: 2px solid var(--light);
  font-size: .875em;
  color: var(--light);
}

article {
  max-width: 920px;
  width: 100%;
  margin: 0 auto;

  img {
    max-width: 100%;
    margin-top: var(--spacings-kilo);
  }
}

.tags {
  display: flex;
  flex-direction: row;
  gap: var(--spacings-byte);
}

.listing h3 {
  margin-bottom: var(--spacings-bit);
}

.listing .url {}

.listing .url a {
  color: var(--light);
  text-decoration: none;
}

.filter {
  margin-bottom: var(--spacings-mega);

  .filterName {
    text-transform: uppercase;
    font-weight: bold;
  }

  .entries {
    display: grid;
    grid-template-columns: 1fr auto;
  }
}

.tree {
  .folder {
    margin-left: var(--spacings-mega);
  }

  button[aria-expanded] {
    background-color: transparent;
    border-color: transparent;
    color: var(--foreground);
    cursor: pointer;
    position: absolute;
    left: -22px;
    top: 2px;
    width: 22px;
    height: 22px;
    padding: 0;
    font-size: 0.7rem;

    &[aria-expanded="false"] {
      transform: rotate(-90deg);
    }
  }

  .icon {
    min-width: 12px;
    min-height: 12px;
    width: 0.75em;
    height: 0.75em;
    display: inline-block;
    vertical-align: text-bottom;

    svg {
      width: 100%;
      height: 100%;
    }
  }
}

.hiearchy {
  display: flex;
  flex-direction: row;
  list-style: none;
  margin: 0;
  padding: 0;

  .separator {
    margin: 0 var(--spacings-kilo);
  }
}

.search {
  input {
    border-radius: 0;
    outline: none;
    border: 1px solid #a2a9b1;
    box-shadow: inset 0 0 0 1px transparent;
    box-sizing: border-box;
    display: block;
    font-family: inherit;
    font-size: inherit;
    line-height: 1.375;
    margin: 0;
    min-height: 32px;
    padding: 4px 8px;
    transition-duration: .25s;
    transition-property: background-color, color, border-color, box-shadow;
    width: 100%;
  }

  input[type="search"] {
    -webkit-appearance: none;
    -moz-appearance: textfield;
  }
}

.logo {
  font-size: 1.2rem;
  text-decoration: none;
  font-family: var(--font-mono);
  font-weight: bold;
}

.link {
  .title {
    margin-bottom: var(--spacings-bit);
    font-weight: bold;
  }

  margin-bottom: var(--spacings-mega);
}

.tree {
  a {
    text-decoration: none;

    &.active {
      font-weight: bold;
    }
  }

  .entry {
    position: relative;
  }

  .folder {
    display: none;

    &.expanded {
      display: block;
    }
  }
}

